--- a/pages/cadastrar_professor.html
+++ b/pages/cadastrar_professor.html
@@ -96,7 +96,7 @@
             <hr id="hr2" />
             <section id="sectionMeio">
                 <article id="articleTitulo">
-                    <h2 class="h2Titulo">Cadastrar Aluno</h2>
+                    <h2 class="h2Titulo">Cadastrar Professor</h2>
                 </article>
                 <article id="articleInput">
                     <div id="divLabel">
