Página Cronograma implementada, ajuste no tamanho das páginas realizado e responsividade da tabela melhorada.

--- a/pages/cadastrar_cronograma.html
+++ b/pages/cadastrar_cronograma.html
@@ -137,7 +137,7 @@
                                         <label id="labelGenero">Módulo</label>
                                         <div id="divGenero"> 
                                             <div id="divRadioGenero">
-                                                <input type="radio" name="modulo_a" value="a" checked />
+                                                <input type="radio" name="modulo" value="a" checked />
                                             </div>
                                             <div id="divLabelGenero">
                                                 <label id="genero">A</label>
@@ -145,7 +145,7 @@
                                         </div>
                                         <div id="divGenero">
                                             <div id="divRadioGenero">
-                                                <input type="radio" name="modulo_b" value="b" />
+                                                <input type="radio" name="modulo" value="b" />
                                             </div>
                                             <div id="divLabelGenero">
                                                 <label id="genero">B</label>
@@ -153,7 +153,7 @@
                                         </div>
                                         <div id="divGenero">
                                             <div id="divRadioGenero">
-                                                <input type="radio" name="modulo_c" value="c" />
+                                                <input type="radio" name="modulo" value="c" />
                                             </div>
                                             <div id="divLabelGenero">
                                                 <label id="genero">C</label>
@@ -161,7 +161,7 @@
                                         </div>
                                         <div id="divGenero">
                                             <div id="divRadioGenero">
-                                                <input type="radio" name="modulo_d" value="d" />
+                                                <input type="radio" name="modulo" value="d" />
                                             </div>
                                             <div id="divLabelGenero">
                                                 <label id="genero">D</label>
@@ -173,7 +173,7 @@
                                     <div class="dados_table">
                                         <table>
                                             <caption>
-                                                Cronogramas Cadastrados
+                                                Criar Cronograma
                                             </caption>
                                             <tr>
                                                 <th>UC</th>
@@ -182,22 +182,22 @@
                                                 <th>Data Fim</th>
                                             </tr>
                                             <tr>
-                                                <td data-cell="uc">unidade curricular 1</td>
-                                                <td data-cell="prof">professor 1</td>
-                                                <td data-cell="data_inicio">07/07/2023</td>
-                                                <td data-cell="data_fim">07/12/2023</td>
+                                                <td>unidade curricular 1</td>
+                                                <td>professor 1</td>
+                                                <td>07/07/2023</td>
+                                                <td>07/12/2023</td>
                                             </tr>
                                             <tr>
-                                                <td data-cell="uc">unidade curricular 2</td>
-                                                <td data-cell="prof">professor 2</td>
-                                                <td data-cell="data_inicio">07/07/2023</td>
-                                                <td data-cell="data_fim">07/12/2023</td>
+                                                <td>unidade curricular 2</td>
+                                                <td>professor 2</td>
+                                                <td>07/07/2023</td>
+                                                <td>07/12/2023</td>
                                             </tr>
                                             <tr>
-                                                <td data-cell="uc">unidade curricular 3</td>
-                                                <td data-cell="prof">professor 3</td>
-                                                <td data-cell="data_inicio">07/07/2023</td>
-                                                <td data-cell="data_fim">07/12/2023</td>
+                                                <td>unidade curricular 3</td>
+                                                <td>professor 3</td>
+                                                <td>07/07/2023</td>
+                                                <td>07/12/2023</td>
                                             </tr>
                                         </table>
                                     </div>
@@ -210,7 +210,7 @@
                                         </select>
                                     </div>
                                 </fieldset>
-                                <article id="articleButton">
+                                <article id="articleButtonCadCronograma">
                                     <p class="pCenter" id="btns"><button type="submit" class="botao2" id="btnEscolherProfessor" name="btnEscolherProfessor">Escolher Professor</button></p>
                                 </article>
                             </fieldset>
