--- a/pages/cadastrar_curso.html
+++ b/pages/cadastrar_curso.html
@@ -118,7 +118,7 @@
                         </form>
                     </div>
                 </article>
-                <article id="articleButton">
+                <article id="articleButtonCadCurso">
                     <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Curso">Cadastrar</button></p>
                 </article>
             </section>
