--- a/pages/cadastrar_uc.html
+++ b/pages/cadastrar_uc.html
@@ -134,7 +134,7 @@
                         </form>
                     </div>
                 </article>
-                <article id="articleButton">
+                <article id="articleButtonCadCronograma">
                     <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Uc">Cadastrar</button></p>
                 </article>
             </section>
