--- a/pages/cadastrar_aluno.html
+++ b/pages/cadastrar_aluno.html
@@ -295,7 +295,7 @@
                         </form>
                     </div>
                 </article>
-                <article id="articleButton">
+                <article id="articleButtonCadCronograma">
                     <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Aluno">Cadastrar</button></p>
                 </article>
             </section>
