--- a/pages/cadastrar_professor.html
+++ b/pages/cadastrar_professor.html
@@ -274,7 +274,7 @@
                         </form>
                     </div>
                 </article>
-                <article id="articleButton">
+                <article id="articleButtonCadCronograma">
                     <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Professor">Cadastrar</button></p>
                 </article>
             </section>
